# os-toy-i386

./: CMakeLists.txt
script/: img-write-win.bat  qemu-debug-win.bat
source/boot/: CMakeLists.txt  start.S
source/comm/: cpuistr.h  elf.h  info.h  types.h
source/kernel/: CMakeLists.txt  kernel.lds
source/kernel/core/: task.c
source/kernel/cpu/: cpu.c  irq.c
source/kernel/dev/: timer.c
source/kernel/include/: os_cfg.h
source/kernel/include/core/: task.h
source/kernel/include/cpu/: cpu.h  irq.h
source/kernel/include/dev/: timer.h
source/kernel/include/ipc/: mutex.h  sem.h
source/kernel/include/tools/: klib.h  list.h  log.h
source/kernel/init/: init.c  init.h  start.S
source/kernel/ipc/: mutex.c  sem.c
source/kernel/tools/: klib.c  list.c  log.c
source/loader/: CMakeLists.txt  loader.h  loader16.c  loader32.c  start.S
